methods.basics.Methods.scala.error
Erreur de compilation :
Methods:1: error: Missing closing brace `}' assumed here
def goAndGet() {
^