methods.basics.Methods.scala.code
def goAndGet() {
var nbPas:Int =0;
var compteur:Int =0;
while (estSurBiscuit==false) {
    avance;
    nbPas=nbPas+1;
  }
  
prendBiscuit;
  
while(nbPas!=compteur) {
  

      recule;
  	compteur=compteur+1;
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}